# cppimagefilterbase

./: CMakeLists.txt  main.cpp  png_toolkit.cpp  png_toolkit.h  stb_image.h  stb_image_write.h
ConfigReader/: ConfigFilterReader.cpp  ConfigFilterReader.h
Filters/: ConvolutionalFilter.cpp  ConvolutionalFilter.h  Filter.cpp  Filter.h  FilterFabric.cpp  FilterFabric.h  Filter_BW.cpp  Filter_BW.h  Filter_Blur.cpp  Filter_Blur.h  Filter_Red.cpp  Filter_Red.h  Filter_Threshold.cpp  Filter_Threshold.h  KernFilter.cpp  KernFilter.h
ImageZone/: ImageZone.cpp  ImageZone.h
